// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Team mention description should not render Team Mention description component if context is not given 1`] = `null`;

exports[`Team mention description should render Team Mention description component with less than 50 members, includes you 1`] = `
.emotion-0 {
  color: var(--ds-text-subtlest, #7A869A);
  font-size: 12px;
  margin-top: 2px;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
  class="emotion-0"
>
  Team • 5 members, including you
</span>
`;

exports[`Team mention description should render Team Mention description component with less than 50 members, not including you 1`] = `
.emotion-0 {
  color: var(--ds-text-subtlest, #7A869A);
  font-size: 12px;
  margin-top: 2px;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
  class="emotion-0"
>
  Team • 4 members
</span>
`;

exports[`Team mention description should render Team Mention description component with more than 50 members, includes you 1`] = `
.emotion-0 {
  color: var(--ds-text-subtlest, #7A869A);
  font-size: 12px;
  margin-top: 2px;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
  class="emotion-0"
>
  Team • 50+ members, including you
</span>
`;

exports[`Team mention description should render Team Mention description component with more than 50 members, not including you 1`] = `
.emotion-0 {
  color: var(--ds-text-subtlest, #7A869A);
  font-size: 12px;
  margin-top: 2px;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
  class="emotion-0"
>
  Team • 50+ members
</span>
`;
